fixed collapsing navbar / font color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,7 @@
      float: left;
      margin-bottom: 15px;
  }
+
+ #main-nav a.nav-link {
+     color: white
+ }
